[package]
name = "mandelrust"
version = "0.1.0"
authors = ["André-Patrick Bubel <code@andre-bubel.de>"]
license = "GPL-3.0+"

[dependencies]
rust-mpfr = "*"
timeit = "*"
image = "0.6"
pbr = "*"
palette = "*"
carboxyl = "0.2"
carboxyl_window = "0.0.3"
benzene = "0.1"
glutin = "0.4"
shader_version = "0.2"
pistoncore-glutin_window = "0.20"
piston2d-graphics = "0.13"
piston2d-glium_graphics = "0.19"
glium = "0.13"
piston = "0.17"
pistoncore-input = "0.8"
